--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(135deg, #153677, #4e085f );
+    background: linear-gradient(135deg, #fc9f35, #a010c4 );
     padding: 10px;
 }
 
@@ -90,4 +90,20 @@ ul li.checked{
 }
 ul li.checked::before{
     background-image: url(img/checked.png);
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+ul li span:hover{
+    background: #edeef0;
 }
