--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     background-color: white;
     margin: 100px auto 20px;
     padding: 40px 30px 70px;
-    border-radius: 10px;
+    border-radius: 30px 5px 30px 5px;
 }
 .todo-app h2{
     color: #002765;
